# rust-shit-no-lame-shit

./: README.md
rusty-ecom/: Cargo.toml  DockerFile  ecom.db
rusty-ecom/migrations/: 001_create_products.sql  002_create_users.sql
rusty-ecom/src/: auth.rs  db.rs  error.rs  main.rs  middleware.rs  models.rs
rusty-ecom/src/api/: mod.rs
rusty-ecom/src/api/auth/: auth.rs  login.rs  register.rs
rusty-ecom/src/api/delete/: mod.rs  products.rs
rusty-ecom/src/api/delete/[id]/: product.rs
rusty-ecom/src/api/get/: mod.rs  products.rs  test_product.rs
rusty-ecom/src/api/get/[id]/: product.rs
rusty-ecom/src/api/post/: mod.rs  product.rs  products.rs
rusty-ecom/src/api/put/: mod.rs
rusty-ecom/src/api/put/[id]/: product.rs
temp/src/: main.rs
